Add tag_suffix to workflow call for conformance and functional workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,6 +290,7 @@ jobs:
       image: ${{ matrix.image }}
       k8s-version: ${{ matrix.k8s-version }}
       build_os: ${{ matrix.build_os }}
+      tag_suffix: ${{ matrix.build_os != '' && format('-{0}', matrix.build_os) || '' }}
     secrets: inherit
     permissions:
       contents: read
@@ -314,6 +315,7 @@ jobs:
       k8s-version: ${{ matrix.k8s-version }}
       enable-experimental: ${{ matrix.enable-experimental }}
       build_os: ${{ matrix.build_os }}
+      tag_suffix: ${{ matrix.build_os != '' && format('-{0}', matrix.build_os) || '' }}
       production-release: ${{ inputs.is_production_release == true && (inputs.dry_run == false || inputs.dry_run == null) }}
       release_version: ${{ inputs.release_version }}
     secrets: inherit
