--- a/.github/workflows/functional.yml
+++ b/.github/workflows/functional.yml
@@ -10,13 +10,13 @@ on:
         required: false
         type: string
         default: ''
+      tag_suffix:
+        required: false
+        type: string
+        default: ''
       k8s-version:
         required: true
         type: string
-      production-release:
-        required: false
-        type: boolean
-        default: false
 
 defaults:
   run:
@@ -69,12 +69,11 @@ jobs:
           images: |
             name=ghcr.io/nginx/nginx-gateway-fabric
           tags: |
-            type=semver,pattern={{version}},suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=edge,suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=schedule,suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=ref,event=pr,suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=ref,event=branch,suffix=-rc${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }},enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
-            type=raw,value={{inputs.release_version}},enable=${{ inputs.production-release && inputs.release_version != '' }},suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
+            type=semver,pattern={{version}},suffix=${{ inputs.tag_suffix }}
+            type=schedule,suffix=${{ inputs.tag_suffix }}
+            type=edge,suffix=${{ inputs.tag_suffix }}
+            type=ref,event=pr,suffix=${{ inputs.tag_suffix }}
+            type=ref,event=branch,suffix=-rc${{ inputs.tag_suffix }},enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
 
       - name: NGINX Docker meta
         id: nginx-meta
@@ -83,12 +82,11 @@ jobs:
           images: |
             name=ghcr.io/nginx/nginx-gateway-fabric/${{ inputs.image == 'plus' && 'nginx-plus' || inputs.image }}
           tags: |
-            type=semver,pattern={{version}},suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=edge,suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=schedule,suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=ref,event=pr,suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
-            type=ref,event=branch,suffix=-rc${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }},enable=${{ startsWith(github.ref, 'refs/heads/release')
-            type=raw,value={{inputs.release_version}},enable=${{ inputs.production-release && inputs.release_version != '' }},suffix=${{ inputs.build_os != '' && format('-{0}', inputs.build_os) || '' }}
+            type=semver,pattern={{version}},suffix=${{ inputs.tag_suffix }}
+            type=edge,suffix=${{ inputs.tag_suffix }}
+            type=schedule,suffix=${{ inputs.tag_suffix }}
+            type=ref,event=pr,suffix=${{ inputs.tag_suffix }}
+            type=ref,event=branch,suffix=-rc${{ inputs.tag_suffix }},enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
 
       - name: Build binary
         uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
