--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -6,11 +6,7 @@ on:
       image:
         required: true
         type: string
-      build_os:
-        required: false
-        type: string
-        default: ''
-      tag_suffix:
+      build-os:
         required: false
         type: string
         default: ''
@@ -83,12 +79,12 @@ jobs:
           images: |
             name=ghcr.io/nginx/nginx-gateway-fabric
           tags: |
-            type=semver,pattern={{version}},suffix=${{ inputs.tag_suffix }}
-            type=edge,suffix=${{ inputs.tag_suffix }}
-            type=schedule,suffix=${{ inputs.tag_suffix }}
-            type=ref,event=pr,suffix=${{ inputs.tag_suffix }}
-            type=ref,event=branch,suffix=-rc${{ inputs.tag_suffix }},enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
-            type=raw,value={{ inputs.release_version }},enable={{ inputs.production-release && inputs.release_version != '' }},suffix=${{ inputs.tag_suffix }}
+            type=semver,pattern={{version}},suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=edge,suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=schedule,suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=ref,event=pr,suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=ref,event=branch,suffix=-rc${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }},enable=${{ startsWith(github.ref, 'refs/heads/release') && inputs.tag == '' }} && !inputs.production-release }}
+            type=raw,value={{ inputs.release_version }},enable={{ inputs.production-release && inputs.release_version != '' }},suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
 
       - name: NGINX Docker meta
         id: nginx-meta
@@ -97,12 +93,12 @@ jobs:
           images: |
             name=ghcr.io/nginx/nginx-gateway-fabric/${{ inputs.image == 'plus' && 'nginx-plus' || inputs.image }}
           tags: |
-            type=semver,pattern={{version}},suffix=${{ inputs.tag_suffix }}
-            type=edge,suffix=${{ inputs.tag_suffix }}
-            type=schedule,suffix=${{ inputs.tag_suffix }}
-            type=ref,event=pr,suffix=${{ inputs.tag_suffix }}
-            type=ref,event=branch,suffix=-rc${{ inputs.tag_suffix }},enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
-            type=raw,value={{inputs.release_version}},enable=${{ inputs.production-release && inputs.release_version != '' }},suffix=${{ inputs.tag_suffix }}
+            type=semver,pattern={{version}},suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=edge,suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=schedule,suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=ref,event=pr,suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
+            type=ref,event=branch,suffix=-rc${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }},enable=${{ startsWith(github.ref, 'refs/heads/release') && !inputs.production-release }}
+            type=raw,value={{inputs.release_version}},enable=${{ inputs.production-release && inputs.release_version != '' }},suffix=${{ inputs.build-os != '' && format('-{0}', inputs.build-os) || '' }}
 
       - name: Build binary
         uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
