--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Build NGINX Docker Image
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
-          file: build/Dockerfile${{ inputs.image == 'nginx' && '.nginx' || '' }}${{ inputs.image == 'plus' && '.nginxplus' || ''}}
+          file: build/${{ inputs.build-os != '' && format('/{0}', inputs.build-os) || '' }}Dockerfile${{ inputs.image == 'nginx' && '.nginx' || '' }}${{ inputs.image == 'plus' && '.nginxplus' || '' }}
           tags: ${{ steps.nginx-meta.outputs.tags }}
           context: "."
           load: true
@@ -133,7 +133,6 @@ jobs:
             NJS_DIR=internal/controller/nginx/modules/src
             NGINX_CONF_DIR=internal/controller/nginx/conf
             BUILD_AGENT=gha
-            BUILD_OS=${{ inputs.build-os }}
 
       - name: Update Go Modules
         if: ${{ github.event_name == 'schedule' }}
