--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,11 +275,10 @@ jobs:
   build-operator:
     name: Build Operator images
     needs: [vars, binary]
-    uses: ./.github/workflows/build-operator.yml
+    uses: ./.github/workflows/build.yml
     with:
       image: operator
       platforms: "linux/arm64, linux/amd64"
-      build-os: ${{ matrix.build-os }}
       tag: ${{ inputs.release_version || '' }}
       dry_run: ${{ inputs.dry_run || false }}
       runner: ${{ github.repository_owner == 'nginx' && (inputs.is_production_release || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'ubuntu-24.04-amd64' || 'ubuntu-24.04' }}
