--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ on:
         required: false
         type: string
         default: ''
+      operator_version:
+        required: false
+        type: string
+        default: ''
       dry_run:
         required: false
         type: boolean
@@ -395,7 +399,7 @@ jobs:
     with:
       image: operator
       platforms: "linux/arm64, linux/amd64"
-      tag: ${{ inputs.release_version || '' }}
+      tag: ${{ inputs.operator_version || '' }}
       dry_run: ${{ inputs.dry_run || false }}
       runner: ${{ github.repository_owner == 'nginx' && (inputs.is_production_release || (github.event_name == 'push' && github.ref == 'refs/heads/main')) && 'ubuntu-24.04-amd64' || 'ubuntu-24.04' }}
     permissions:
